[package]
name = "grapefruit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grapefruit-macros = { path = "grapefruit-macros", version = "0.1.0" }
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", default-features = false }
thiserror = "1.0.50"
url = "2.4.1"
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
bigdecimal = { version = "0.4.2", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"
once_cell = "1.19.0"

[features]
default = ["postgres"]
postgres = [
    "sqlx/postgres",
    "sqlx/runtime-tokio",
    "sqlx/tls-native-tls",
    "sqlx/json",
    "sqlx/chrono",
    "sqlx/bigdecimal",
]
mysql = [
    "sqlx/mysql",
    "sqlx/runtime-tokio",
    "sqlx/tls-native-tls",
    "sqlx/json",
    "sqlx/chrono",
    "sqlx/bigdecimal",
]
sqlite = [
    "sqlx/sqlite",
    "sqlx/runtime-tokio",
    "sqlx/tls-native-tls",
    "sqlx/json",
    "sqlx/chrono",
    "sqlx/bigdecimal",
]
